# OpenFoundry

./: .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  ROADMAP.md  backlog.md  checklist.md  checklist_status.md  clippy.toml  deny.toml  justfile  ontology-building-checklist.md  ontology-building-palantir-matrix.md  package.json  pnpm-lock.yaml  remaining_gaps.md  roadmap_checklist_gaps.md  rustfmt.toml
.github/workflows/: ci-frontend.yml  ci.yml  deploy-docs.yml  docker-publish.yml  helm-check.yml  proto-check.yml  release.yml  sdk-smoke.yml  security-audit.yml  terraform-check.yml
Good-practices-architecture/: Checklist de Evaluación de Arquitectura de Software.md  Checklist de Evaluación de Arquitectura — Monorepo con Microservicios.md
apps/web/: eslint.config.js  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vitest.config.ts
benchmarks/: README.md
benchmarks/scenarios/: critical-paths.json
docs/: .gitignore  index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/architecture/: capability-map.md  contracts-and-sdks.md  index.md  monorepo.md  runtime-topology.md  services-and-ports.md
docs/guide/: documentation-website.md  index.md  local-development.md  quality-gates.md  repository-map.md
docs/ontology-building/: action-types.md  functions.md  index.md  indexing-and-materialization.md  object-edits-and-conflict-resolution.md  object-permissioning.md  semantic-search.md
docs/operations/: ci-cd.md  deployment-modes.md  deployment.md  index.md  runbooks.md
docs/reference/: api-sdk-mcp.md  index.md  repository-layout.md
docs_original_palantir_foundry/: scraper.py
docs_original_palantir_foundry/foundry-docs/: .scraper_state.json
infra/: README.md  docker-compose.dev.yml  docker-compose.yml
infra/runbooks/: disaster-recovery.md  upgrade-playbook.md
infra/scripts/: minio_backup.sh  minio_restore.sh  postgres_backup.sh  postgres_restore.sh
libs/audit-trail/: Cargo.toml
libs/audit-trail/src/: lib.rs
libs/auth-middleware/: Cargo.toml
libs/auth-middleware/src/: claims.rs  jwt.rs  layer.rs  lib.rs  rbac.rs  row_level_security.rs  tenant.rs
libs/core-models/: Cargo.toml
libs/core-models/src/: error.rs  health.rs  ids.rs  lib.rs  observability.rs  pagination.rs  timestamp.rs
libs/event-bus/: Cargo.toml
libs/geospatial-core/: Cargo.toml
libs/geospatial-core/src/: lib.rs
libs/plugin-sdk/: Cargo.toml
libs/plugin-sdk/src/: lib.rs
libs/query-engine/: Cargo.toml
libs/query-engine/src/: context.rs  datasource.rs  lib.rs  optimizer_rules.rs  udf.rs
libs/storage-abstraction/: Cargo.toml
libs/storage-abstraction/src/: backend.rs  lib.rs  local.rs  s3.rs  signed_urls.rs
libs/testing/: Cargo.toml
libs/testing/src/: lib.rs
libs/vector-store/: Cargo.toml
libs/vector-store/src/: lib.rs
proto/: buf.gen.yaml  buf.yaml
proto/auth/: auth.proto  rbac.proto
proto/common/: errors.proto  health.proto  types.proto
proto/data_integration/: connector.proto
proto/dataset/: dataset.proto  schema.proto
proto/notebook/: cell.proto  kernel.proto  notebook.proto
proto/ontology/: ontology.proto
proto/pipeline/: lineage.proto  pipeline.proto
proto/query/: query.proto
services/ai-service/: Cargo.toml
services/ai-service/src/: config.rs  main.rs
services/ai-service/src/domain/: copilot.rs  evaluation.rs  mod.rs
services/ai-service/src/domain/agents/: executor.rs  memory.rs  planner.rs
services/ai-service/src/domain/llm/: cache.rs  gateway.rs  guardrails.rs  mod.rs  provider.rs  runtime.rs
services/ai-service/src/domain/rag/: chunker.rs  embedder.rs  indexer.rs  retriever.rs
services/ai-service/src/handlers/: agents.rs  chat.rs  knowledge.rs  mod.rs  prompts.rs  tools.rs
services/ai-service/src/models/: agent.rs  conversation.rs  knowledge_base.rs  mod.rs  prompt_template.rs  provider.rs  tool.rs
services/app-builder-service/: Cargo.toml
services/audit-service/: Cargo.toml
services/data-connector/: Cargo.toml
services/data-connector/src/: config.rs  main.rs
services/data-connector/src/connectors/: catalog_bridge.rs  csv.rs  json.rs  mod.rs  postgres.rs  rest_api.rs  salesforce.rs
services/data-connector/src/domain/: discovery.rs  mod.rs  schema_inference.rs  sync_engine.rs
services/data-connector/src/handlers/: connections.rs  hyperauto.rs  mod.rs  sync_ops.rs
services/data-connector/src/models/: connection.rs  connector_profile.rs  mod.rs  sync_job.rs
services/notification-service/: Cargo.toml
services/notification-service/config/: prod.toml
services/notification-service/src/: config.rs  main.rs
services/notification-service/src/handlers/: history.rs  mod.rs  preferences.rs  send.rs  ws.rs
services/notification-service/src/models/: notification.rs  subscription.rs
services/ontology-service/: Cargo.toml
services/ontology-service/src/: config.rs  main.rs
services/ontology-service/src/domain/: access.rs  function_runtime.rs  graph.rs  indexer.rs  mod.rs  project_access.rs  rules.rs  schema.rs  type_system.rs
services/ontology-service/src/domain/search/: fulltext.rs  mod.rs  semantic.rs
services/ontology-service/src/handlers/: actions.rs  functions.rs  funnel.rs  interfaces.rs  links.rs  mod.rs  objects.rs  projects.rs  properties.rs  rules.rs  search.rs  types.rs
services/ontology-service/src/models/: action_type.rs  function_package.rs  graph.rs  link_type.rs  mod.rs  object_view.rs  property.rs  rule.rs  search.rs
services/report-service/: Cargo.toml
services/report-service/src/: config.rs  main.rs
services/report-service/src/domain/: cron.rs  data_fetcher.rs  distribution.rs  mod.rs
services/report-service/src/domain/generators/: csv.rs  excel.rs  html.rs  mod.rs  pdf.rs  pptx.rs
services/report-service/src/handlers/: crud.rs  download.rs  generate.rs  mod.rs  schedule.rs
services/report-service/src/models/: mod.rs  recipient.rs  report.rs  schedule.rs  snapshot.rs  template.rs
tools/of-cli/: Cargo.toml
tools/of-cli/src/: benchmark.rs  main.rs  mock_provider.rs  openapi.rs  smoke.rs
(+603 files in other folders)
