[package]
name = "auth-middleware"
description = "JWT validation, claims extraction, and RBAC middleware for Axum/Tonic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
core-models = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
