[package]
name = "geospatial-core"
description = "Geospatial primitives, H3 indexing, WKT parsing, and MVT tile encoding"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
