[package]
name = "plugin-sdk"
description = "Rust + WASM SDK for OpenFoundry connectors, transforms, and widgets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }