[package]
name = "query-engine"
description = "Apache DataFusion wrappers, custom UDFs, and table providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
datafusion = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
arrow = { version = "53" }
