[package]
name = "ontology-service"
description = "Semantic graph — object types, link types, actions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
core-models = { workspace = true }
auth-middleware = { workspace = true }
event-bus = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }

