[package]
name = "report-service"
description = "Report generation — PDF, Excel, scheduled delivery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
core-models = { workspace = true }
event-bus = { workspace = true }
auth-middleware = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
storage-abstraction = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
lettre = { version = "0.11.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-native-tls"] }
