[package]
name = "of-cli"
description = "OpenFoundry CLI for project scaffolding, deployment planning, scripting, and API docs generation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "of"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
auth-middleware = { workspace = true }
plugin-sdk = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
